--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preload"
+      href="{{ '/assets/fonts/SpecialElite-Regular.woff' | relative_url }}"
+      as="font" type="font/woff" crossorigin>
     <title>{{ page.title }} · {{ site.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}" />
   </head>
