Main Text. Materials page + books. About page(subject to revisions)

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/materials">Materials</a>
-      <a href="/about/">About</a>
+      <a href="/"><span class="h2n">Home</span></a>
+      <a href="/materials"><span class="h2n">Materials</span></a>
+      <a href="/about/"><span class="h2n">About</span></a>
     </nav>
 
     <main>
