--- a/assets/styles.css
+++ b/assets/styles.css
@@ -90,7 +90,6 @@ img{
   height:auto;
   display:block;
   margin:1.25rem auto;
-  /* border-radius:10px; */
 }
 
 .caption {
@@ -104,15 +103,23 @@ img{
 .title {
   /* font-size: 36px; */
   font-family: "Special Elite", "Courier New", ui-monospace, monospace;
-  /* font-size: clamp(28px, 4vw, 48px); */
-  font-size: 3.25rem;
+  font-size: clamp(2.75rem, 4vw, 3.25rem);
+  /* font-size: 3.25rem; */
   font-weight: 600;
   margin: 0;
 }
 
-h1 .title{
+h1.title{
   display: block;
+  text-align:left;
   margin: 0;
+}
+
+@media (max-width: 600px) {
+  h1.title{ text-align: left; }
+  body{font-size:1rem;}
+  figure{margin: 1.25rem 0;}
+
 }
 
 .deck{
