--- a/_includes/default.html
+++ b/_includes/default.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="preload"
-      href="/assets/fonts/special-elite-regular.woff"
+      href="/assets/fonts/special-elite-regular.woff2"
       as="font" type="font/woff" crossorigin>
     
-  
-    <link rel="preload"
-      href="/assets/fonts/staatliches-regular.woff"
-      as="font" type="font/woff" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@400;600&display=swap" rel="stylesheet">
 
     <title>{{ title }} · SSMCIS-columbia</title>
 
@@ -19,9 +18,9 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="/"><span class="h2n">Home</span></a>
-      <a href="/materials"><span class="h2n">Materials</span></a>
-      <a href="/about/"><span class="h2n">About</span></a>
+      <a href="/"><span class="typewriter">Home</span></a>
+      <a href="/materials"><span class="typewriter">Materials</span></a>
+      <a href="/about/"><span class="typewriter">About</span></a>
     </nav>
 
     <main>
