--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,7 @@
 
 @font-face{
   font-family: "Special Elite";
-  src: url("/assets/fonts/special-elite-regular.woff") format("woff");
+  src: url("/assets/fonts/special-elite-regular.woff2") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -44,9 +44,9 @@ body{
   margin:0;
   background:var(--bg);
   color:var(--text);
-  font-family: ui-serif, Georgia, serif;
+  font-family:  "Source Serif 4", Georgia, ui-serif, serif; 
   font-size:18px;
-  line-height:1.7;
+  line-height:1.6;
   text-align:justify;
 }
 
@@ -66,9 +66,17 @@ a:hover {
   text-decoration:none;
 }
 
-.material {
-  color:var(--text);
+img{
+  max-width:100%;
+  height:auto;
+  display:block;
+  margin:1.25rem auto;
+}
 
+@media (max-width: 600px) {
+  h1.title{ text-align: left; }
+  body{font-size:1rem;}
+  figure{margin: 1.25rem 0;}
 }
 
 .nav{
@@ -85,11 +93,8 @@ a:hover {
 }
 .nav a:hover{color:var(--link); opacity:1; }
 
-img{
-  max-width:100%;
-  height:auto;
-  display:block;
-  margin:1.25rem auto;
+.typewriter{
+  font-family: "Special Elite", "Courier New", ui-monospace, monospace;
 }
 
 .caption {
@@ -115,13 +120,6 @@ h1.title{
   margin: 0;
 }
 
-@media (max-width: 600px) {
-  h1.title{ text-align: left; }
-  body{font-size:1rem;}
-  figure{margin: 1.25rem 0;}
-
-}
-
 .deck{
   margin-top: 0;
   font-family: "Raleway-Semibold", system-ui, sans-serif;
@@ -144,6 +142,7 @@ h2 .deck {
   color: var(--caption);
 }
 
-.h2n{
-  font-family: "Special Elite", "Courier New", ui-monospace, monospace;
+.material {
+  color:var(--text);
 }
+
