--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -47,14 +47,19 @@ body{
   font-family:  "Source Serif 4", Georgia, ui-serif, serif; 
   font-size:18px;
   line-height:1.6;
-  text-align:justify;
+  /* text-align:justify; */
 }
+
+
 
 main{
   max-width:47rem;
   margin:3rem auto;
   padding:0 1.25rem;
 }
+
+p { margin: 0; }
+p + p { margin-top: 1.1em; }
 
 a {
   color:var(--link);
@@ -106,10 +111,8 @@ img{
 }
 
 .title {
-  /* font-size: 36px; */
   font-family: "Special Elite", "Courier New", ui-monospace, monospace;
   font-size: clamp(2.75rem, 4vw, 3.25rem);
-  /* font-size: 3.25rem; */
   font-weight: 600;
   margin: 0;
 }
@@ -119,6 +122,14 @@ h1.title{
   text-align:left;
   margin: 0;
 }
+
+.secnum{ margin: 0;}
+
+
+
+h2:has(.secnum) { margin: 0; }
+p + h2:has(.secnum) { margin-top: 1.5em; }
+h2:has(.secnum) + p { margin-top: 0.4em; }
 
 .deck{
   margin-top: 0;
