--- a/_includes/default.html
+++ b/_includes/default.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@400;600&display=swap" rel="stylesheet">
 
     <title>{{ title }} · SSMCIS-columbia</title>
+    <meta name="description" content="{{ description }}">
+
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{{ description }}">
+    <meta property="og:image" content="{{ image }}">
 
     <link rel="stylesheet" href="/assets/styles.css" />
   </head>
